PWN-2819 - Remove rpc client from solana (#391)
* PWN-1655 - Remove empty interactor

* PWN-1655 - Restore data length for getMinBalanceForRentException

* PWN-1655 - Rename repository variables

* PWN-1655 - Change arg name in FeeRelayer Module

* PWN-1655 - change fun arg names

* PWN-2819 - Finish first step of refactor - rewrite all classes to kt and reorganize classes to common architecture of project

* PWN-2819 - Launch ktlint and remove useless spaces

* PWN-2819 - Remove moshi library from solanaj module

* PWN-2819 - Fix bugs with minting transaction statuses in renBtc

* PWN-2819 - Return moshi library for subscription web socket client

* PWN-2819 - Refactor environment manager

* PWN-2819 - Temporary remove rpc tests

* start to recover test

* PWN-2819 - Resolve PR comments and start to recover tests

* PWN-3082 - Resolve PR comments, clear branch, merge with dev branch

* PWN-2819 - Resolve PR comments and temporary comments tests

* PWN-2819-merge with dev branch

* PWN-2819 - Fix canceling start session for renBtc

* PWN-2819 - Fix crash when network is not available

* feature/PWN-2819 - Change RenBTC start session implementation

* PWN-2819 - Fix ren btc sessions errors

* PWN-2819 - Fix crash with changing network in renBtc token

Co-authored-by: “khasanov.davran” <“khasanov.davran@p2p.org”>
Co-authored-by: khasanov.davran <khasanov.davran@p2p.org>